--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-responsive-modal": "^6.1.0",
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
