--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-responsive-modal": "^6.1.0",
+    "react-slick": "^0.28.1",
     "sass": "^1.35.2"
   },
   "devDependencies": {
