--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
+    "react-img-zoom": "^0.1.0",
     "react-responsive-modal": "^6.1.0",
     "react-slick": "^0.28.1",
     "react-toastify": "^7.0.4",
